...
        cwButton.configuration?.baseForegroundColor = .hibari(.primaryText)
        cwButton.accessibilityIdentifier = "noteDetail.cw"
        cwButton.addAction(UIAction { [weak self] _ in self?.toggleCW() }, for: .touchUpInside)
        addSubview(cwButton)

        bodyTextView.onLink = { [weak self] in self?.onLink?($0) }
        bodyTextView.accessibilityIdentifier = "noteDetail.text"
        addSubview(bodyTextView)
        media.onTap = { [weak self] index in self?.onMedia?(.note, index) }
        media.onReveal = { [weak self] in self?.revealSensitive() }
        addSubview(media)
        files.onTap = { [weak self] in self?.onLink?($0) }
        addSubview(files)
...
